tests/ui/closures/issue-80313-mutable-borrow-in-closure.stderr
error[E0596]: cannot borrow `callback` as mutable, as it is not declared as mutable
  --> $DIR/issue-80313-mutable-borrow-in-closure.rs:6:5
   |
LL |         &mut my_var;
   |              ------ calling `callback` requires mutable binding due to mutable borrow of `my_var`
LL |     };
LL |     callback();
   |     ^^^^^^^^ cannot borrow as mutable
   |
help: consider changing this to be mutable
   |
LL |     let mut callback = || {
   |         +++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0596`.
