tests/ui/closures/issue-80313-mutable-borrow-in-closure.rs
fn main() {
    let mut my_var = false;
    let callback = || {
        &mut my_var;
    };
    callback(); //~ ERROR E0596
}
